target/classes/META-INF/fabric8/openshift/spring-openshift-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=spring-openshift&var-version=0.0.1-SNAPSHOT
  labels:
    app: spring-openshift
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.example.openshift
  name: spring-openshift
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: spring-openshift
    provider: fabric8
    group: com.example.openshift
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=spring-openshift&var-version=0.0.1-SNAPSHOT
      labels:
        app: spring-openshift
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: com.example.openshift
    spec:
      containers:
      - env:
        - name: MY_DATABASE_SERVICE_HOST
          value: my-database.myproject.svc.cluster.local
        - name: MY_DATABASE_SERVICE_PORT
          value: "5432"
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: user
              name: my-database-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: my-database-secret
        - name: JAVA_OPTIONS
          value: -Dspring.profiles.active=openshift
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: ""
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: spring-openshift:latest
    type: ImageChange
