target/classes/META-INF/fabric8/openshift/spring-openshift-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: b7da2641b68c357010cac061e6caec48973e2bc6
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    prometheus.io/scrape: "true"
    prometheus.io/port: "9779"
  labels:
    expose: "true"
    app: spring-openshift
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.example.openshift
  name: spring-openshift
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-openshift
    provider: fabric8
    group: com.example.openshift
