target/classes/META-INF/fabric8/openshift/spring-openshift-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: spring-openshift
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.example.openshift
  name: spring-openshift
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-openshift
